# so_arm_100_hardware

./: CMakeLists.txt  README.md
config/: calibration.yaml  hardware_config.yaml
include/SCServo_Linux/: SCSerial.cpp
include/so_arm_100_hardware/: so_arm_100_interface.hpp
scripts/: calibrate_arm.py  jog_joints.py  zero_pose.py
src/: so_arm_100_interface.cpp
test/: ping_test.cpp  test_pwm.cpp  test_servo.cpp
